@@ -54,3 +54,13 @@ Application ClassLoader，负责去加载“ClassPath”环境变量所指定的
 
 ### Java堆内存
 存放代码中创建的各种对象的
+
+## jvm
+### jvm参数
+
+- -Xms:Java堆内存的大小 、-Xmx:Java堆内存的最大大小 
+- -Xms和-Xmx，分别用于设置Java堆内存的刚开始的大小，以及允许扩张到的最大大小。
+- -Xmn:Java堆内存中的新生代大小，扣除新生代剩下的就是老年代的内存大小 
+- -XX:PermSize:永久代大小、-XX:MaxPermSize:永久代最大大小
+- jdk1.8 用这两个-XX:MetaspaceSize和-XX:MaxMetaspaceSize替换永久代大小
+- -Xss:每个线程的栈内存大小
